hide email in mobile to prevent nav bar covering content

--- a/public/assets/css/modern-business.css
+++ b/public/assets/css/modern-business.css
@@ -27,3 +27,9 @@ body {
 .portfolio-item {
   margin-bottom: 30px;
 }
+
+@media (max-width: 767px) {
+    .hide-in-mobile {
+        display: none !important;
+    }
+}
